--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  http: 0.12.0+4
-  path_provider: 1.6.5
+  http: 0.12.1
+  path_provider: 1.6.10
   flutter_localizations:
     sdk: flutter
   flutter:
