--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Anki API
+    implementation 'com.github.ankidroid:Anki-Android:api-v1.1.0'
 }
