--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: An app to create and manage a vocabulary list.
 version: 0.0.1+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
   http: 0.13.5
